--- a/static/index.css
+++ b/static/index.css
@@ -1,3 +1,138 @@
-p {
-  font-size: 150%;
+/** Core Structure Styles **/
+.clr-fix:before,
+.clr-fix:after {
+  content: ".";
+  display: block;
+  height: 0;
+  overflow: hidden;
 }
+
+.clr-fix:after {
+    clear: both;
+}
+
+.clr-fix {
+    zoom: 1; /* IE < 8 */
+}
+
+/* floats */
+.f-left {
+	float: left;
+}
+
+.f-right {
+	float: right;
+}
+/* end floats */
+
+/* columns */
+.col-wrap:before,
+.col-wrap:after {
+  content: ".";
+  display: block;
+  height: 0;
+  overflow: hidden;
+}
+
+.col-wrap:after {
+    clear: both;
+}
+
+.col-wrap {
+    zoom: 1; /* IE < 8 */
+}
+
+.col-wrap > .col {
+	float: left;
+}
+
+.col-wrap.dw-20 > .col,
+.dw-20:not(.col-wrap) {
+	width: 20%;
+}
+
+.col-wrap.dw-30 > .col,
+.dw-30:not(.col-wrap) {
+	width: 30%;
+}
+
+.col-wrap.dw-40 > .col,
+.dw-40 {
+	width: 40%;
+}
+
+.col-wrap.dw-50 > .col,
+.dw-50:not(.col-wrap) {
+	width: 50%;
+}
+
+.col-wrap.dw-60 > .col,
+.dw-60:not(.col-wrap) {
+	width: 60%;
+}
+
+.col-wrap.dw-70 > .col,
+.dw-70:not(.col-wrap) {
+	width: 70%;
+}
+
+.col-wrap.dw-80 > .col,
+.dw-80:not(.col-wrap) {
+	width: 80%;
+}
+
+.col-wrap.dw-100 > .col,
+.dw-100:not(.col-wrap) {
+	width: 100%;
+}
+/* end columns */
+
+/* forms */
+label {
+	display: block;
+	font-size: 75%;
+}
+/* end forms */
+
+/* medium mq */
+@media (max-width: 850px) {
+.col-wrap.tw-20 > .col,
+.tw-20:not(.col-wrap) {
+	width: 20%;
+}
+
+.col-wrap.tw-30 > .col,
+.tw-30:not(.col-wrap) {
+	width: 30%;
+}
+
+.col-wrap.tw-40 > .col,
+.tw-40:not(.col-wrap) {
+	width: 40%;
+}
+
+.col-wrap.tw-50 > .col,
+.tw-50:not(.col-wrap) {
+	width: 50%;
+}
+
+.col-wrap.tw-60 > .col,
+.tw-60:not(.col-wrap) {
+	width: 60%;
+}
+
+.col-wrap.tw-70 > .col,
+.tw-70:not(.col-wrap) {
+	width: 70%;
+}
+
+.col-wrap.tw-80 > .col,
+.tw-80:not(.col-wrap) {
+	width: 80%;
+}
+
+.col-wrap.tw-100 > .col,
+.tw-100:not(.col-wrap) {
+	width: 100%;
+}
+/* end medium mq */
