--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,18 +1,26 @@
+/** App Styles **/
 @import 'normalize.css';
 
-$primary-color: white;
+$site-bg: #333;
+$primary-color: #dedede;
+$link-color: pink;
+$link-hover-color: #fff;
 
 body {
   font-family: arial, 'sans-serif';
-  background: #333;
+  background: $site-bg;
   color: $primary-color;
   text-align: center;
+  margin: 0;
+  padding: 0;
+  font-family: Helvetica, arial, sans-serif;
+  line-height: 1.5em;
 }
 
 a {
-  color: $primary-color;
+  color: $link-color;
 }
 
 a:hover {
-  color: pink;
+  color: $link-hover-color;
 }
