--- a/static/index.css
+++ b/static/index.css
@@ -46,6 +46,18 @@
 	float: left;
 }
 
+.col-wrap.d-2col > .col {
+	width: 50%;
+}
+
+.col-wrap.d-3col > .col {
+	width: 33.3333%;
+}
+
+.col-wrap.d-4col > .col {
+	width: 25%;
+}
+
 .col-wrap.dw-20 > .col,
 .dw-20:not(.col-wrap) {
 	width: 20%;
@@ -96,43 +108,120 @@ label {
 
 /* medium mq */
 @media (max-width: 850px) {
-.col-wrap.tw-20 > .col,
-.tw-20:not(.col-wrap) {
-	width: 20%;
-}
+	.col-wrap.t-1col > .col {
+		width: 100%;
+	}
 
-.col-wrap.tw-30 > .col,
-.tw-30:not(.col-wrap) {
-	width: 30%;
-}
+	.col-wrap.t-2col > .col {
+		width: 50%;
+	}
 
-.col-wrap.tw-40 > .col,
-.tw-40:not(.col-wrap) {
-	width: 40%;
-}
+	.col-wrap.t-3col > .col {
+		width: 33.3333%;
+	}
 
-.col-wrap.tw-50 > .col,
-.tw-50:not(.col-wrap) {
-	width: 50%;
-}
+	.col-wrap.t-4col > .col {
+		width: 25%;
+	}
 
-.col-wrap.tw-60 > .col,
-.tw-60:not(.col-wrap) {
-	width: 60%;
-}
+	.col-wrap.tw-20 > .col,
+	.tw-20:not(.col-wrap) {
+		width: 20%;
+	}
 
-.col-wrap.tw-70 > .col,
-.tw-70:not(.col-wrap) {
-	width: 70%;
-}
+	.col-wrap.tw-30 > .col,
+	.tw-30:not(.col-wrap) {
+		width: 30%;
+	}
 
-.col-wrap.tw-80 > .col,
-.tw-80:not(.col-wrap) {
-	width: 80%;
-}
+	.col-wrap.tw-40 > .col,
+	.tw-40:not(.col-wrap) {
+		width: 40%;
+	}
 
-.col-wrap.tw-100 > .col,
-.tw-100:not(.col-wrap) {
-	width: 100%;
+	.col-wrap.tw-50 > .col,
+	.tw-50:not(.col-wrap) {
+		width: 50%;
+	}
+
+	.col-wrap.tw-60 > .col,
+	.tw-60:not(.col-wrap) {
+		width: 60%;
+	}
+
+	.col-wrap.tw-70 > .col,
+	.tw-70:not(.col-wrap) {
+		width: 70%;
+	}
+
+	.col-wrap.tw-80 > .col,
+	.tw-80:not(.col-wrap) {
+		width: 80%;
+	}
+
+	.col-wrap.tw-100 > .col,
+	.tw-100:not(.col-wrap) {
+		width: 100%;
+	}
+}
+/* end medium mq */
+
+/* medium sm */
+@media (max-width: 480px) {
+	.col-wrap.m-1col > .col {
+		width: 100%;
+	}
+
+	.col-wrap.m-2col > .col {
+		width: 50%;
+	}
+
+	.col-wrap.m-3col > .col {
+		width: 33.3333%;
+	}
+
+	.col-wrap.m-4col > .col {
+		width: 25%;
+	}
+
+	.col-wrap.mw-20 > .col,
+	.mw-20:not(.col-wrap) {
+		width: 20%;
+	}
+
+	.col-wrap.mw-30 > .col,
+	.mw-30:not(.col-wrap) {
+		width: 30%;
+	}
+
+	.col-wrap.mw-40 > .col,
+	.mw-40:not(.col-wrap) {
+		width: 40%;
+	}
+
+	.col-wrap.mw-50 > .col,
+	.mw-50:not(.col-wrap) {
+		width: 50%;
+	}
+
+	.col-wrap.mw-60 > .col,
+	.mw-60:not(.col-wrap) {
+		width: 60%;
+	}
+
+	.col-wrap.mw-70 > .col,
+	.mw-70:not(.col-wrap) {
+		width: 70%;
+	}
+
+	.col-wrap.mw-80 > .col,
+	.mw-80:not(.col-wrap) {
+		width: 80%;
+	}
+
+	.col-wrap.mw-100 > .col,
+	.mw-100:not(.col-wrap) {
+		width: 100%;
+	}
 }
 /* end medium mq */
